--- a/parallel.html
+++ b/parallel.html
@@ -112,7 +112,7 @@
 
     // setup color
     var color = d3.scale.ordinal()
-                    //.range(["red","steelblue"])
+                    .range(["orange","blue"])
                     .domain(["F","M"]) //map to studytime (ordinal)
     // setup value scale
     var x = d3.scale.ordinal().rangePoints([0, w], 1)
@@ -297,21 +297,7 @@
 
                     }
             })
-
-
-       }
-
-
-
-
-
-
-
-
-
-
-
-
+        }
 
 //-------------------------------------------------------------------------------------
 //
@@ -571,6 +557,6 @@
 
 
     </script>
-
+    <script type="text/javascript"></script>
   </body>
 </html>
