--- a/parallel.html
+++ b/parallel.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <title>Han Parrallel</title>
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
-    <!--<link type="text/css" href="d3.slider.css" media="screen" /> -->
-    <!-- <script type="text/javascript" src="d3.slider.js"></script> -->
-    <link rel="stylesheet" type="text/css" href="static/d3.slider.css" media="screen" />
-    <script src="static/d3.slider.js"></script>
+    <!-- <link type="text/css" href="./stylesheets/d3.slider.css" media="screen" />
+    <script type="text/javascript" src="./javascripts/d3.slider.js"></script> -->
+    <!--<link rel="stylesheet" type="text/css" href="static/d3.slider.css" media="screen" /> -->
+    <!-- <script src="static/d3.slider.js"></script> -->
     <style >
+        body {
+            background-color: #ffffcc;
+            }
         .background path{
             fill: none;
             stroke:#ddd;
@@ -95,7 +98,14 @@
   </div>
   <div id="scatter">
       <div id = "control_panel">
-          <div id="slider1">Absences</div>
+          <div id="slider1">Absences
+              <form>
+                  <input type="radio" name="weight" value=1 checked> 1
+                  <input type="radio" name="weight" value=2> 2
+                  <input type="radio" name="weight" value=4> 4
+                  <input type="radio" name="weight" value=8> 8
+              </form>
+          </div>
           <div id="slider2">Reason</div>
           <div id="slider3">Support</div>
           <div id="slider4">Age</div>
@@ -525,6 +535,7 @@
      });
 
     </script>
+
     <script type="text/javascript">
         var margin = {top:20,right:20,bottom:20,left:20};
         var w11 = 800 - margin.left - margin.right
@@ -563,75 +574,75 @@
 
         var Absences=1,Reason=1,Support=1,Age=1,Fjob=1,Mjob=1,Fedu=1,Medu=1,Ach=1;
 
-        var slider1 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-                        //.showRange(true)//.orientation("vertical");
-        var slider2 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-
-                        //.showRange(true)
-        var slider3 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-
-                        //.showRange(true)
-        var slider4 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-
-                        //.showRange(true)
-        var slider5 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-
-                        //.showRange(true)
-        var slider6 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-
-                        //.showRange(true)
-        var slider7 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-
-                        //.showRange(true)
-        var slider8 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-
-        var slider9 = d3.slider().value(1).min(1).max(8)
-                        .tickValues([1,2,4,8]).stepValues([1,2,4,8])
-
-        d3.select('#slider1').call(slider1)
-        .on("slide", function(event, value) {
-                Absences = value
-        });
-        d3.select('#slider2').call(slider2)
-        .on("slide", function(evt, value) {
-                Reason = value
-        });
-        d3.select('#slider3').call(slider3)
-        .on("slide", function(evt, value) {
-                Support = value
-        });
-        d3.select('#slider4').call(slider4)
-        .on("slide", function(evt, value) {
-                Age = value
-        });
-        d3.select('#slider5').call(slider5)
-        .on("slide", function(evt, value) {
-                Fjob = value
-        });
-        d3.select('#slider6').call(slider6)
-        .on("slide", function(evt, value) {
-                Mjob = value
-        });
-        d3.select('#slider7').call(slider7)
-        .on("slide", function(evt, value) {
-                Fedu = value
-        });
-        d3.select('#slider8').call(slider8)
-        .on("slide", function(evt, value) {
-                Medu = value
-        });
-        d3.select('#slider9').call(slider9)
-        .on("change", function(evt, value) {
-                Ach = value
-        });
+        // var slider1 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //                 //.showRange(true)//.orientation("vertical");
+        // var slider2 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //
+        //                 //.showRange(true)
+        // var slider3 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //
+        //                 //.showRange(true)
+        // var slider4 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //
+        //                 //.showRange(true)
+        // var slider5 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //
+        //                 //.showRange(true)
+        // var slider6 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //
+        //                 //.showRange(true)
+        // var slider7 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //
+        //                 //.showRange(true)
+        // var slider8 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //
+        // var slider9 = d3.slider().value(1).min(1).max(8)
+        //                 .tickValues([1,2,4,8]).stepValues([1,2,4,8])
+        //
+        // d3.select('#slider1').call(slider1)
+        // .on("slide", function(event, value) {
+        //         Absences = value
+        // });
+        // d3.select('#slider2').call(slider2)
+        // .on("slide", function(evt, value) {
+        //         Reason = value
+        // });
+        // d3.select('#slider3').call(slider3)
+        // .on("slide", function(evt, value) {
+        //         Support = value
+        // });
+        // d3.select('#slider4').call(slider4)
+        // .on("slide", function(evt, value) {
+        //         Age = value
+        // });
+        // d3.select('#slider5').call(slider5)
+        // .on("slide", function(evt, value) {
+        //         Fjob = value
+        // });
+        // d3.select('#slider6').call(slider6)
+        // .on("slide", function(evt, value) {
+        //         Mjob = value
+        // });
+        // d3.select('#slider7').call(slider7)
+        // .on("slide", function(evt, value) {
+        //         Fedu = value
+        // });
+        // d3.select('#slider8').call(slider8)
+        // .on("slide", function(evt, value) {
+        //         Medu = value
+        // });
+        // d3.select('#slider9').call(slider9)
+        // .on("change", function(evt, value) {
+        //         Ach = value
+        // });
 
         //
         d3.select("#submit").on("click",function(){
