--- a/parallel_3.html
+++ b/parallel_3.html
@@ -32,11 +32,11 @@
             border:1px solid black;
             }
 
-        select{
+/*        selection{
             position:absolute;
             top:850px;
             left:780px;
-        }
+        }*/
 
         #chart{
             width:100%;
@@ -623,7 +623,7 @@
                                 draw_pie();
 
                             })
-                            .attr("class","select");
+                            .attr("class","selection");
 
 
         selection.selectAll("option")
