--- a/parallel_4.html
+++ b/parallel_4.html
@@ -106,6 +106,11 @@
         <p>Student Number vs Feature</p>
     </div>
   </div>
+  <div style="text-align:center;">
+        <h2 >Diemension Reduction non-linear projection with selected emphasis</h2>
+        <p>Dimensionality Reduction is about converting data of very high dimensionality into data of much lower dimensionality such that each of the lower dimensions convey much more information.</p>
+        <p>Our interaction is to let user (probably domain expert) to select important features and our projection will give extra weights on these selected features.</p>
+  </div>
   <div id="scatter">
       <div id = "control_panel">
           <div id="slider1">Absences Weight
