--- a/parallel_4.html
+++ b/parallel_4.html
@@ -122,26 +122,6 @@
       </div>
   </div>
 
-<!--   <div id = "header" style="text-align:center;">
-    <h1> CS573 Final Project: Student Grade Explore</h1>
-    <p> 2016Fall:  Han Jiang, Chong Zhou, Haitao Liu</h2>
-  </div>
-
-  <div id = "parallel" style="text-align:center;">
-      <div id = "data_info">
-          <h3>Data Information</h3>
-          <p>This data includes student achievement in secondary education of two Portuguese schools in Math subject. Each student has 29 features, the details are followed.</p>
-      </div>
-  </div>
-
-  <div id = "chart" style="text-align:center;">
-    <div id = "bar_numeric">
-        <p>A: 16-20, B:14-15, C:12-13, D:10-11, F:0-9</p>
-    </div>
-    <div id = "pie">
-        <p>Student Number vs Feature</p>
-    </div>
-  </div> -->
   <div style="text-align:center;">
         <h2 >Diemension Reduction non-linear projection with selected emphasis</h2>
         <p>Dimensionality Reduction is about converting data of very high dimensionality into data of much lower dimensionality such that each of the lower dimensions convey much more information.</p>
@@ -293,6 +273,8 @@
 
     var data_detail = ["1. studytime - weekly study time","2. failures - number of past class failures","3. goout - going out with friends","4. Dalc - workday alcohol consumption","5. Walc - weekend alcohol consumption","6. absences - number of school absences","7. G1 - first period grade", "8. G2 - second period grade", "9. G3 - final grade", "10. school - student's school","11. sex - student’s sex","12. age - student’s age","13. address - student’s home address type","14. famsize - family size","15. Pstatus - parent’s cohabitation status","16. Medu - mother’s education","17. Fedu - father’s education","18. Mjob - mother’s job","19. Fjob - father’s job","20. reason - reason to choose this school","21. guardian - student’s guardian","22. schoolsup - extra educational support","23. famsup - family educational support","24. paid - extra paid classes within the course subject","25. activities - extra-curricular activities","26. nursery - attended nursery school","27. higher - wants to take higher education","28. internet - Internet access at home","29. romantic - with a romantic relationship"];
 
+    var grade = ["A: 16-20", "B: 14-15", "C: 12-13", "D: 10-11", "F:0-9"];
+
     var x = d3.scale.ordinal().rangePoints([0, w], 1)
         y = {},
         dragging = {},
@@ -305,7 +287,7 @@
         background,
         foreground;
 
-    var xbar = d3.scale.ordinal().rangeBands([0, w2-50],.1).domain(["A","B","C","D","F"]);
+    var xbar = d3.scale.ordinal().rangeBands([0, w2-100],.1).domain(["A","B","C","D","F"]);
     var ybar = d3.scale.linear()
                         .range([h2,0])
                         //.domain([0,150]);
@@ -666,14 +648,14 @@
                             .enter()
                             .append("rect")
                             .attr("x",function(d,i){
-                                return 25 + i*80;
+                                return 25 + i*70;
                             })
                             .attr("y",function(d){
                                 //return h2 - ybar(d);
                                 return  ybar(d);
                                 //return d;
                             })
-                            .attr("width",40)
+                            .attr("width",30)
                             .attr("height",function(d){
                                 return h2 - ybar(d);
                                 //return d;
@@ -682,30 +664,7 @@
                                 return b_color(i);
                             })
                             .attr("opacity",1);
-                            //.transition()
-                            //.duration(1550);
 
-            // svg2.selectAll("text")
-            //         .data(data)
-            //         .enter()
-            //         .append("text")
-            //         .attr("x",function(d,i){
-            //             return 40 + i *90;
-            //         })
-            //         .attr("y",function(d){return ybar(d) + 15;})
-            //         .text(function(d){return d})
-            //         .append("text")
-            //         .attr("class","barLabel")
-            //         .style("font-size","10px");
-
-            bars.append("text")
-                    .attr("x",function(d,i){
-                        return 40 + i*90;
-                    })
-                    .attr("y",0)
-                    .text(function(d){
-                        return d;
-                    });
 
             svg2.append("svg:g")
                 .attr("class","axis")
@@ -718,45 +677,40 @@
                 .attr("transform", "translate(" + 20 + ",0)")
                 .call(b_yAixs);
 
-            // svg2.append("text")
-            //     .attr("x",100)
-            //     .attr("y",0)
-            //     .text("Students Number vs Final Grades")
-            //     .style("font-size","18px")
-            //     .attr("class","title");
-
-
-            //highlight selected bar
-            // bars.on("mouseover",function(d){
-            //     d3.select(this)
-            //         .attr("fill","orange")
-            //     })
-            //     .on("mouseout",function(d){
-            //         d3.select(this).transition()
-            //                         .attr("fill","red");
-            //     })
-
-
 
         }
 
-        //function bar_text(data){
-            // svg2.selectAll(".barLabel").remove();
-            // //console.log(data);
-            // svg2.selectAll("text")
-            //     .data(c)
-            //     .enter()
-            //     .append("text")
-            //     .text(function(d){
-            //         return d;
-            //     })
-            //     .attr("x",function(d,i){
-            //         return 40 + i*90;
-            //     })
-            //     .attr("y",0)
-            //     .attr("font-size","11px")
-            //     .attr("font-family","sans-serif");
-        //}
+        var bar_legend = svg2.append("svg:g")
+                              .attr("class","bar_legend")
+                              .selectAll("rect")
+                              .data(grade)
+                              .enter()
+                              .append("rect")
+                              .attr("x",w2 - 70)
+                              .attr("y",function(d,i){
+                                return 100 + i*18;
+                              })
+                              .attr("width",10)
+                              .attr("height",10)
+                              .attr("fill", function(d,i){
+                                return b_color(i);
+                              });
+
+        var bar_legend_text = svg2.append("svg:g")
+                                  .attr("class","bar_legend_text")
+                                  .selectAll("text-anchor")
+                                  .data(grade)
+                                  .enter()
+                                  .append("text")
+                                  .attr("x",w2 - 57)
+                                  .attr("y",function(d,i){
+                                    return 110 + i*18;
+                                  })
+                                  .text(function(d){
+                                    return d;
+                                  })
+                                  .style("font-size","12px")
+
 
         var selection = d3.select("#pie")
                             //.append("div")
@@ -770,7 +724,6 @@
                                 draw_pie();
 
                             });
-                            //.attr("class","selection");
 
 
         selection.selectAll("option")
